--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,27 @@
 [versions]
 
-kotlin = "2.0.20"
-ksp = "2.0.20-1.0.25"
-agp = "8.7.2"
+kotlin = "2.1.20"
+ksp = "2.1.20-1.0.32"
+agp = "8.9.1"
 gradlePlugins-google-services = "4.4.2"
-coroutines = "1.9.0"
+coroutines = "1.10.1"
 atomicfu = "0.23.2"
 kotlinDatetime = "0.6.1"
-kotlinSerialization = "1.7.3"
-compose-ui = "1.7.5"
+kotlinSerialization = "1.8.0"
+compose-ui = "1.7.8"
 composePlugin = "1.7.0"
 navigationCompose = "2.7.0-alpha07"
 composeCompiler = "1.5.11"
-androidxActivityCompose = "1.9.3"
+androidxActivityCompose = "1.10.1"
 androidxLifecycleViewmodel = "2.8.7"
 appcompat = "1.7.0"
-ktx = "1.15.0"
+ktx = "1.16.0"
 splashScreen = "1.0.1"
-dataStore = "1.1.1"
-sqlite = "2.5.0-alpha11"
-room = "2.7.0-alpha11"
-firebase = "2.0.0"
+dataStore = "1.1.4"
+sqlite = "2.5.0"
+room = "2.7.0"
+ktor = "3.1.2"
+ktorfit = "2.5.0"
 koinBom = "4.0.0"
 napier = "2.7.1"
 detekt = "1.23.7"
@@ -64,9 +65,11 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 sqlite = { module = "androidx.sqlite:sqlite", version.ref = "sqlite" }
 
-firebase-auth = { module = "dev.gitlive:firebase-auth", version.ref = "firebase" }
-firebase-firestore = { module = "dev.gitlive:firebase-firestore", version.ref = "firebase" }
-
+ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktorfit-lib = { module = "de.jensklingenberg.ktorfit:ktorfit-lib", version.ref = "ktorfit" }
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 
 libsodium = { module = "com.ionspin.kotlin:multiplatform-crypto-libsodium-bindings", version.ref = "libsodium" }
@@ -81,6 +84,7 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
 
 commonAndroidPlugin = { id = "common-android-plugin" }
 coreModule = { id = "core-module-plugin" }
