--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@
 kotlin = "2.1.20"
 ksp = "2.1.20-1.0.32"
 agp = "8.9.1"
-gradlePlugins-google-services = "4.4.2"
+gms = "4.4.2"
 coroutines = "1.10.1"
 atomicfu = "0.23.2"
 kotlinDatetime = "0.6.1"
@@ -11,7 +11,6 @@ kotlinSerialization = "1.8.0"
 compose-ui = "1.7.8"
 composePlugin = "1.7.0"
 navigationCompose = "2.7.0-alpha07"
-composeCompiler = "1.5.11"
 androidxActivityCompose = "1.10.1"
 androidxLifecycleViewmodel = "2.8.7"
 appcompat = "1.7.0"
@@ -29,8 +28,6 @@ libsodium = "0.9.2"
 kvault = "1.12.0"
 
 [libraries]
-
-kotlin = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 
 android-buildTools = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -80,15 +77,12 @@ kvault = { module = "com.liftric:kvault", version.ref = "kvault" }
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
-
 commonModulePlugin = { id = "common-module-plugin" }
-
 room = { id = "androidx.room", version.ref = "room" }
-kotlinAndroid = { id = "kotlin-android" }
-google-services = { id = "com.google.gms.google-services", version.ref = "gradlePlugins-google-services" }
+gms = { id = "com.google.gms.google-services", version.ref = "gms" }
 detekt = { id = "plugins.detekt" }
