--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,25 @@
 [versions]
 
 kotlin = "2.1.20"
-ksp = "2.1.20-1.0.32"
+ksp = "2.1.20-2.0.0"
 agp = "8.9.3"
 gms = "4.4.2"
 coroutines = "1.10.1"
 atomicfu = "0.27.0"
 kotlinDatetime = "0.6.2"
 kotlinSerialization = "1.8.1"
-compose-ui = "1.8.1"
-composePlugin = "1.8.0"
-navigationCompose = "2.7.0-alpha07"
-androidxActivityCompose = "1.10.1"
-androidxLifecycleViewmodel = "2.9.0"
+composeUi = "1.8.2"
+composePlugin = "1.8.1"
+navigationCompose = "2.9.0-beta02"
 appcompat = "1.7.0"
 ktx = "1.16.0"
 splashScreen = "1.0.1"
-dataStore = "1.1.6"
+dataStore = "1.1.7"
 sqlite = "2.5.1"
 room = "2.7.1"
 ktor = "3.1.2"
-ktorfit = "2.5.0"
-koinBom = "4.0.0"
+ktorfit = "2.5.2"
+koinBom = "4.1.0-RC1"
 napier = "2.7.1"
 detekt = "1.23.8"
 libsodium = "0.9.2"
@@ -37,14 +35,11 @@ kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "a
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinDatetime" }
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerialization" }
 
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidxActivityCompose" }
-androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidxLifecycleViewmodel" }
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycleViewmodel" }
 androidx-splashScreen = { module = "androidx.core:core-splashscreen", version.ref = "splashScreen" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-ktx = { module = "androidx.core:core-ktx", version.ref = "ktx" }
-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-ui" }
-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-ui" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUi" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUi" }
 
 jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
