--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 
-kotlin = "2.1.20"
-ksp = "2.1.20-2.0.0"
-agp = "8.9.3"
-gms = "4.4.2"
-coroutines = "1.10.1"
-atomicfu = "0.27.0"
-kotlinDatetime = "0.6.2"
-kotlinSerialization = "1.8.1"
-composeUi = "1.8.2"
-composePlugin = "1.8.1"
-navigationCompose = "2.9.0-beta02"
-appcompat = "1.7.0"
-ktx = "1.16.0"
+kotlin = "2.2.21"
+ksp = "2.2.21-2.0.4"
+agp = "8.12.3"
+gms = "4.4.4"
+coroutines = "1.10.2"
+atomicfu = "0.29.0"
+kotlinDatetime = "0.7.1"
+kotlinSerialization = "1.9.0"
+composeUi = "1.9.4"
+composePlugin = "1.9.2"
+navigationCompose = "2.9.1"
+appcompat = "1.7.1"
+ktx = "1.17.0"
 splashScreen = "1.0.1"
 dataStore = "1.1.7"
-sqlite = "2.5.1"
-room = "2.7.1"
-ktor = "3.1.2"
-ktorfit = "2.5.2"
-koinBom = "4.1.0-RC1"
+sqlite = "2.6.1"
+room = "2.8.3"
+ktor = "3.3.1"
+ktorfit = "2.6.4"
+koinBom = "4.1.1"
 napier = "2.7.1"
 detekt = "1.23.8"
-libsodium = "0.9.2"
+libsodium = "0.9.4"
 kvault = "1.12.0"
 
 [libraries]
