--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,29 @@
 [versions]
 
+java = "21"
 kotlin = "2.2.21"
-ksp = "2.2.21-2.0.4"
-agp = "8.12.3"
+ksp = "2.3.3"
+agp = "8.13.2"
 gms = "4.4.4"
 coroutines = "1.10.2"
 atomicfu = "0.29.0"
 kotlinDatetime = "0.7.1"
 kotlinSerialization = "1.9.0"
-composeUi = "1.9.4"
-composePlugin = "1.9.2"
+composeUi = "1.10.1"
+composePlugin = "1.10.0"
 navigationCompose = "2.9.1"
 appcompat = "1.7.1"
 ktx = "1.17.0"
-splashScreen = "1.0.1"
-dataStore = "1.1.7"
-sqlite = "2.6.1"
-room = "2.8.3"
-ktor = "3.3.1"
-ktorfit = "2.6.4"
+splashScreen = "1.2.0"
+dataStore = "1.2.0"
+sqlite = "2.6.2"
+room = "2.8.4"
+ktor = "3.3.3"
+ktorfit = "2.7.2"
 koinBom = "4.1.1"
 napier = "2.7.1"
 detekt = "1.23.8"
-libsodium = "0.9.4"
+libsodium = "0.9.5"
 kvault = "1.12.0"
 
 [libraries]
